<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="@drawable/blur"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI CALCULATOR"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#008EFF"
        android:layout_marginLeft="30dp"
        android:textSize="43dp"></TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/weight"
        android:textSize="30sp"
        android:textColor="#D2000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="6"

        android:inputType="number|numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/height"
        android:textColor="#D2000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/calc"
        android:layout_width="275dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_btn"
        android:onClick="calculateBMI"
        android:text="@string/calculateBMI"
        android:textSize="30dp" />

    <TextView
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginLeft="140dp"
        android:gravity="center"
        android:text="RESULT"
        android:textColor="#028EFD"
        android:textSize="35dp"
        android:textStyle="bold">

    </TextView>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textColor="#E8FF09"
        android:textSize="50dp"/>

</LinearLayout>